--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
                 <li>Tecnologia</li>
                 <li>Modelos</li>
                 <button class="btn-scan">INICIAR ESCANEAMENTO 3D</button>
+                <div class="product-thumb">
+        <img src="https://images.unsplash.com/photo-1595950653106-6c9ebd614d3a?q=10&w=150" alt="SmartSneaker Thumb" class="low-res-img">
+    </div>
+    
+    <nav class="action-menu">
+        <button class="nav-btn" onclick="filterView('performance')">Performance</button>
+        <button class="nav-btn" onclick="filterView('conforto')">Conforto</button>
+        <button class="nav-btn active" onclick="comprar()">Configurar Agora</button>
+    </nav>
             </ul>
         </nav>
     </header>
