--- a/index.html
+++ b/index.html
@@ -28,39 +28,40 @@
             <p>Integração total entre Biomecânica e Engenharia de Software.</p>
         </section>
 
-        <section id="customizer" class="config-container">
-            <div class="form-side">
-                <h2>Configure seu Perfil</h2>
-                <div class="input-box">
-                    <label>Peso Corporal (kg)</label>
-                    <input type="number" id="peso" placeholder="Ex: 80">
-                </div>
-                <div class="input-box">
-                    <label>Nível de Atividade</label>
-                    <select id="nivel">
-                        <option value="Iniciante">Iniciante / Hobby</option>
-                        <option value="Pro">Pro / Performance</option>
-                    </select>
-                </div>
-                <button onclick="SneakerEngine.modularizar()" class="btn-main">Gerar Tênis Ideal</button>
+       <section id="customizer" class="config-container">
+    <div class="form-side">
+        <h2 style="color: var(--neon)">Modularize Seu SmartSneaker</h2>
+        <div class="input-box">
+            <label>Peso Corporal (kg)</label>
+            <input type="number" id="peso" placeholder="75">
+        </div>
+        <div class="input-box">
+            <label>Nível de Performance</label>
+            <select id="nivel">
+                <option value="Iniciante">Iniciante</option>
+                <option value="Pro">Pro / Performance</option>
+            </select>
+        </div>
+        <button onclick="SneakerEngine.modularizar()" class="btn-main">Gerar Configuração Ideal</button>
+        
+        <div id="historico-secao" style="margin-top: 30px;">
+            <p style="font-size: 0.8rem; color: #888;">PESQUISAS RECENTES:</p>
+            <div id="lista-historico"></div>
+        </div>
+    </div>
 
-                <div id="historico-secao">
-                    <h3>Últimas Configurações</h3>
-                    <div id="lista-historico"></div>
-                </div>
+    <div class="visual-side">
+        <div class="sneaker-display">
+            <img src="https://images.unsplash.com/photo-1595950653106-6c9ebd614d3a?q=80&w=800" alt="SmartSneaker Pro" style="width: 100%; border-radius: 20px;">
+            
+            <div id="overlay-result" class="hidden">
+                <h4 style="margin:0">✓ Configuração Ativa</h4>
+                <p id="txt-molas"></p>
+                <p id="txt-palmilha"></p>
             </div>
-
-            <div class="visual-side">
-                <div class="sneaker-display">
-                    <img src="https://images.unsplash.com/photo-1595950653106-6c9ebd614d3a?q=80&w=600" alt="SmartSneaker">
-                    <div id="overlay-result" class="hidden">
-                        <div class="badge">Configuração Gerada!</div>
-                        <p id="txt-molas"></p>
-                        <p id="txt-palmilha"></p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </div>
+    </div>
+</section>
     </main>
 
     <script src="script.js"></script>
